force-app/main/default/objects/Krow__Klient_Presets__c/Krow__Klient_Presets__c.object-meta.xml
<CustomObject>
    <label>Klient Preset</label>
    <nameField>
        <label>Klient Presets Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Klient Presets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>