force-app/main/default/objects/Krow__Klient_Presets__c/fields/Krow__Config__c.field-meta.xml
<CustomField>
    <fullName>Krow__Config__c</fullName>
    <label>Config</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>