force-app/main/default/objects/Krow__Klient_Presets__c/fields/Krow__Default__c.field-meta.xml
<CustomField>
    <fullName>Krow__Default__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Default</label>
    <type>Checkbox</type>
</CustomField>