force-app/main/default/objects/Krow__Klient_Presets__c/fields/Krow__Type__c.field-meta.xml
<CustomField>
    <fullName>Krow__Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>All Project Gantt</fullName>
            </value>
            <value>
                <fullName>Single Project Gantt</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>